Mon Dec 21 12:39:29 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/tao_orb_tests.lst:
        * tao/ORB_Core.cpp:
          Fixed bug#3790 and marked corresponding test as fixed in lst.
          Now when object is reinitialized and it's not collocated then
          it's explicitly marked as remote one.

Sun Dec 20 15:57:15 UTC 2009  Abdul Sowayan  <sowayan@gmail.com>

        * TAO_IDL/be/be_template_module_ref.cpp:
          Removed a stray charachter that was causing a compile time error.

Sat Dec 19 06:59:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_interface.cpp
        * TAO_IDL/be_include/be_interface.h
          Merged changes back in that I reverted by accident

Fri Dec 18 18:58:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        Merged changes for templated modules in the TAO_IDL front end to svn head

        Thu Dec 17 20:35:28 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/ifr_adding_visitor.h:
        * orbsvcs/IFR_Service/ifr_adding_visitor_operation.cpp:
        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:

          Changes to TAO IFR loader required by changes to TAO_IDL
          front end in

          Wed Dec 16 20:20:13 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        Wed Dec 16 20:20:13 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/ast_generator.h:
        * TAO_IDL/include/ast_valuetype.h:
        * TAO_IDL/include/ast_eventtype.h:
        * TAO_IDL/include/ast_home.h:
        * TAO_IDL/include/ast_interface.h:
        * TAO_IDL/include/ast_component.h:
        * TAO_IDL/be/be_visitor_typecode/value_typecode.cpp:
        * TAO_IDL/be/be_valuetype.cpp:
        * TAO_IDL/be/be_visitor_home/home_ex_idl.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_sh.cpp:
        * TAO_IDL/be/be_visitor_interface/direct_proxy_impl_sh.cpp:
        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp: