@@ -27,6 +27,26 @@ my $client_iorfile = $client->LocalFile ($iorbase);
 $server->DeleteFile($iorbase);
 $client->DeleteFile($iorbase);
 
+# Generate svc.conf file for server
+my $server_conf = "svc.conf";
+$server->LocalFile ($server_conf);
+
+die "Error: Cannot create svc.conf file" if not open(FH, ">$server_conf");
+print FH "# Define a special Reactor for single-threaded configurations. " .
+            " Refer to README for details. \n";
+print FH "dynamic Resource_Factory Service_Object * Time_Date:_make_My_Resource_Factory()\n";
+print FH "# Dynamically configure the ORB into the application process.\n";
+print FH "dynamic ORB Service_Object * Time_Date:_make_DLL_ORB() \"dummy\"\n";
+print FH "# Once the ORB is configured, dynamically configure the Time_Date service.\n";
+print FH "dynamic Time_Date_Servant Service_Object * Time_Date:_make_Time_Date_Servant() " .
+         "\"dummy -n ORB -o $server_iorfile\"\n";
+close(FH);
+
+if ($server->PutFile ($server_conf) == -1) {
+    print STDERR "ERROR: cannot set file <$server_conf\n";
+    exit 1;
+}
+
 $SV = $server->CreateProcess ("server", "");
 $CL = $client->CreateProcess ("client", "-f $client_iorfile -x -ORBSvcConf $client_conffile");
 $server_status = $SV->Spawn ();
@@ -69,6 +89,7 @@ if ($server_status != 0) {
     $status = 1;
 }
 
+$server->DeleteFile ($server_conf);
 $server->DeleteFile($iorbase);
 $client->DeleteFile($iorbase);
 
