@@ -1,11 +1,0 @@
-# $Id$
-# Define a special Reactor for single-threaded configurations.  Refer
-# to README for details.  
-dynamic Resource_Factory Service_Object * Time_Date:_make_My_Resource_Factory()
-
-# Dynamically configure the ORB into the application process.
-dynamic ORB Service_Object * Time_Date:_make_DLL_ORB() "dummy"
-
-# Once the ORB is configured, dynamically configure the Time_Date service.
-dynamic Time_Date_Servant Service_Object * Time_Date:_make_Time_Date_Servant() "dummy -n ORB -o ior"
-
